2005-01-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-mime-replace-image-tags): Don't use
	too complex regexp.

2005-01-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-mime-replace-image-tags): Ease limits
	on the regexp used to match unquoted text.

2005-01-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-mime-replace-image-tags): Fix regexp
	in order to obey HTML 4.01, the 3.2.2 Attributes section.
	Suggested by Yoichi NAKAYAMA <yoichi@geiin.org>.

2005-01-15  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>

	* shimbun/sb-cnet-jp.el (shimbun-cnet-jp-retrieve-next-pages): Fix
	footer cut; fix ad-hoc `shimbun-clear-contents' call.

2005-01-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-mime-replace-image-tags): Fix regexp.

2005-01-15  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>

	* shimbun/sb-cnet-jp.el (shimbun-cnet-jp-clean-text-page): New function.
	(shimbun-cnet-jp-retrieve-next-pages): Ditto.
	(shimbun-make-contents): New method.

2005-01-14  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>

	* shimbun/sb-w3m-dev.el (shimbun-w3m-dev-url): Change it into the
	new website URL.
	(shimbun-w3m-dev-group-alist): New variable.
	(shimbun-w3m-dev-groups): Generate the value using
	shimbun-w3m-dev-group-alist.
	(shimbun-index-url): New method
	(shimbun-reply-to): Generate the value using
	shimbun-w3m-dev-group-alist.

2005-01-05  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-itmedia.el (shimbun-itmedia-group-alist): Follow
	the change of ITmedia Games.

2005-01-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add the rss group.
	(shimbun-index-url): Work with the rss group.
	(shimbun-asahi-get-headers): Ditto.

2004-07-24  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>

	* w3m.el (w3m-menubar): Rearrange it hierarchical.
	(w3m-setup-menu): Use easymenu.

2005-01-03  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>
